# Nexus

./: .gcloudignore  .gitignore  Dockerfile  README.md  chatgpt-app-submission.json  idea.md  instant.perms.ts  instant.schema.ts  pyproject.toml  val.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
docs/: apps-sdk-notes.md  chatgpt-experience-plan.md  chatgpt-submission-prefill.md  chatgpt-test-cases.md  chatgpt-tool-justifications.md  claude-mcp-app-compatibility.md  cross-host-architecture.md  design.md  mcp-apps-design-objections.md  mcp-path-trailing-slash.md  migrate-to-workers.md  outreach-rework.md  outreach-threads.md  privacy-policy.md  smoke-checklist.md  submission-package.md  usage-guide.md  workout-v2-plan.md
docs/outreach-drafts/2026-07-09/: MANIFEST.md  alex.html  alex.meta.json  alex.txt  anton.html  anton.meta.json  anton.txt  apoorv.html  apoorv.meta.json  apoorv.txt  emilien.html  emilien.meta.json  emilien.txt  frank.html  frank.meta.json  frank.txt  joonas.html  joonas.meta.json  joonas.txt  josh.html  josh.meta.json  (+10 more)
landing/: README.md  package-lock.json  package.json  wrangler.jsonc
landing/public/: _headers  copy.js  host-toggle.js  index.html  styles.css
landing/src/: index.js
legacy/: Dockerfile  README.md
plugins/: README.md
plugins/codex/: .mcp.json
src/nexus/: __init__.py  auth.py  cli.py  config.py  db.py  models.py  server.py  storage.py
src/nipp/: __init__.py  auth.py  config.py  db.py  models.py  server.py  storage.py
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260320114340_create_v2_tables.sql  20260320172007_add_friends.sql  20260513172000_add_oauth_tables.sql
tests/: test_cli.py  test_models.py  test_server.py
widget-skybridge/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
widget-skybridge/src/: helpers.ts  index.css  server.ts
workers/: package-lock.json  package.json  tsconfig.json  wrangler.jsonc
workers/harness/: emit-widget.mjs  host.html  serve.mjs
workers/scripts/: build-widget-bridge.mjs  seed-reviewer.mjs  smoke-production.mjs
workers/src/: index.ts  instant.ts  mcp.ts  text-modules.d.ts  types.ts
workers/test/: metadata.spec.ts  widget-host-compat.regression-1.test.ts  widget-host-contract.test.ts  widget-lifecycle.test.ts
workers/widget-build/: mcp-app-bridge-claude.ts  mcp-app-bridge.ts
(+54 files in other folders)
