[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "2.0.0"
description = "Workout and nutrition tracker – MCP server for ChatGPT."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp<3",
  "psycopg[binary]>=3.2.0",
  "psycopg_pool>=3.2.0",
]

[project.scripts]
nexus = "nexus.cli:main"
nexus-mcp = "nexus.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
