[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-fitness"
version = "2.1.0"
description = "Track workouts and nutrition from your terminal. CLI for the Nexus MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Kushal SM"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/kiluazen/Nexus"
Repository = "https://github.com/kiluazen/Nexus"

[project.scripts]
nexus = "nexus.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
